<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadwheel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bastianweiss@todo.todo">bastianweiss</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- All Plugins For rosdep -->
  <!-- Bridge -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>

  <!-- Ros2 -->
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>

  <!-- Controller -->
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <!-- Mapping -->
  <exec_depend>depthimage_to_laserscan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>
