<?xml version="1.0"?>
<package format="3">
  <name>rome_path_cpp</name>
  <version>0.0.1</version>
  <description>MoveIt2 C++ follow path from YAML</description>

  <maintainer email="bastianweiss@example.com">Bastian Weiss</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>yaml-cpp</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>trajectory_msgs</depend>

  <export>
  </export>
</package>
