<package format="3">
  <name>rome_arm_description</name>
  <version>3.0.0</version>
  <description>Rome ARM, folder adapted from the AR4 from Annin Robotics</description>
  <license>TODO</license>
  <maintainer email="ba379142@ucf.edu">Bastian Weiss</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
